@@ -1,5 +1,8 @@
 package com.ecom.ecommerce_backend.util;
 
+//import java.util.Collections;
+//import java.util.stream.Collectors;
+
 import com.ecom.ecommerce_backend.dto.CategoryRequestDto;
 import com.ecom.ecommerce_backend.dto.CategoryResponseDto;
 import com.ecom.ecommerce_backend.model.Category;
@@ -17,12 +20,21 @@ public class CategoryMapper {
 	    dto.setId(category.getId());
 	    dto.setName(category.getName());
 
-	    if (category.getProducts() != null) {
-	        dto.setProductIds(category.getProducts()
-	            .stream()
-	            .map(product -> product.getId())
-	            .toList());
-	    }
+//	    // FIX: Check if products collection is initialized and not null
+//	    if (category.getProducts() != null && !category.getProducts().isEmpty()) {
+//	        try {
+//	            // Create a safe copy of the collection to avoid ConcurrentModificationException
+//	            dto.setProductIds(category.getProducts()
+//	                .stream()
+//	                .map(product -> product.getId())
+//	                .collect(Collectors.toList()));
+//	        } catch (Exception e) {
+//	            // If there's any issue accessing products, return empty list
+//	            dto.setProductIds(Collections.emptyList());
+//	        }
+//	    } else {
+//	        dto.setProductIds(Collections.emptyList());
+//	    }
 
 	    return dto;
 	}
